--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Progress Bars v1.2.0</title>
+	<title>Progress Bars Hacked v1.2.0</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 	
 	
